--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,9 @@
-# empty
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+
+adrian:
+  name: Adrian Example
+  email: adrian@example.com
+  password_digest: <%= User.digest('password') %>
